gearset/main/default/objects/AllFieldTypesObject__c/AllFieldTypesObject__c.object-meta.xml
<CustomObject>
    <description>Should have boolean, int, double, date, datetime, etc</description>
    <label>AllFieldTypesObject</label>
    <nameField>
        <label>AllFieldTypesObject Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>AllFieldTypesObjects</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>