gearset/main/default/objects/AllFieldTypesObject__c/fields/AAFieldToTransferThenDelete__c.field-meta.xml
<CustomField>
        <fullName>AAFieldToTransferThenDelete__c</fullName>
        <defaultValue>false</defaultValue>
        <label>AAFieldToTransferThenDelete</label>
        <type>Checkbox</type>
    </CustomField>