gearset/main/default/objects/AllFieldTypesObject__c/fields/ABoolean__c.field-meta.xml
<CustomField>
    <fullName>ABoolean__c</fullName>
    <defaultValue>false</defaultValue>
    <label>ABoolean</label>
    <type>Checkbox</type>
</CustomField>