gearset/main/default/objects/AllFieldTypesObject__c/fields/AComboBox__c.field-meta.xml
<CustomField>
        <fullName>AComboBox__c</fullName>
        <label>AComboBox</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>someComboBox1</fullName>
                </value>
                <value>
                    <fullName>someComboBox2</fullName>
                </value>
                <value>
                    <fullName>someComboBox3</fullName>
                </value>
                <value>
                    <fullName>someComboBox4</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </CustomField>