gearset/main/default/objects/AllFieldTypesObject__c/fields/ACurrency__c.field-meta.xml
<CustomField>
    <fullName>ACurrency__c</fullName>
    <label>ACurrency</label>
    <precision>12</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>