gearset/main/default/objects/AllFieldTypesObject__c/fields/Adate__c.field-meta.xml
<CustomField>
    <fullName>Adate__c</fullName>
    <label>Adate</label>
    <type>Date</type>
</CustomField>