gearset/main/default/objects/AllFieldTypesObject__c/fields/ADateTime__c.field-meta.xml
<CustomField>
        <fullName>ADateTime__c</fullName>
        <label>ADateTime</label>
        <type>DateTime</type>
    </CustomField>