gearset/main/default/objects/AllFieldTypesObject__c/fields/ADouble__c.field-meta.xml
<CustomField>
    <fullName>ADouble__c</fullName>
    <label>ADouble</label>
    <precision>18</precision>
    <scale>8</scale>
    <type>Number</type>
</CustomField>