gearset/main/default/objects/AllFieldTypesObject__c/fields/AGeolocation__c.field-meta.xml
<CustomField>
    <fullName>AGeolocation__c</fullName>
    <label>AGeolocation</label>
    <scale>2</scale>
    <type>Location</type>
</CustomField>