gearset/main/default/objects/AllFieldTypesObject__c/fields/ALongTextArea__c.field-meta.xml
<CustomField>
    <fullName>ALongTextArea__c</fullName>
    <label>ALongTextArea</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>