gearset/main/default/objects/AllFieldTypesObject__c/fields/AMultiPickList__c.field-meta.xml
<CustomField>
        <fullName>AMultiPickList__c</fullName>
        <label>AMultiPickList</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>GlobalPickList</valueSetName>
        </valueSet>
    </CustomField>