gearset/main/default/objects/AllFieldTypesObject__c/fields/AnEncryptedTextArea__c.field-meta.xml
<CustomField>
    <fullName>AnEncryptedTextArea__c</fullName>
    <label>AnEncryptedTextArea</label>
    <length>100</length>
    <maskChar>asterisk</maskChar>
    <maskType>lastFour</maskType>
    <type>EncryptedText</type>
</CustomField>