gearset/main/default/objects/AllFieldTypesObject__c/fields/AnInt__c.field-meta.xml
<CustomField>
    <fullName>AnInt__c</fullName>
    <label>AnInt</label>
    <precision>5</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>