gearset/main/default/objects/AllFieldTypesObject__c/fields/APercent__c.field-meta.xml
<CustomField>
    <fullName>APercent__c</fullName>
    <label>APercent</label>
    <precision>5</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>