gearset/main/default/objects/AllFieldTypesObject__c/fields/APhone__c.field-meta.xml
<CustomField>
    <fullName>APhone__c</fullName>
    <label>APhone</label>
    <type>Phone</type>
</CustomField>