gearset/main/default/objects/AllFieldTypesObject__c/fields/APickList__c.field-meta.xml
<CustomField>
        <fullName>APickList__c</fullName>
        <label>APickList</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>GlobalPickList</valueSetName>
        </valueSet>
    </CustomField>