gearset/main/default/objects/AllFieldTypesObject__c/fields/ARichTextArea__c.field-meta.xml
<CustomField>
    <fullName>ARichTextArea__c</fullName>
    <label>ARichTextArea</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>