gearset/main/default/objects/AllFieldTypesObject__c/fields/AText__c.field-meta.xml
<CustomField>
    <fullName>AText__c</fullName>
    <label>AText</label>
    <length>45</length>
    <type>Text</type>
</CustomField>