gearset/main/default/objects/AllFieldTypesObject__c/fields/ATextArea__c.field-meta.xml
<CustomField>
        <fullName>ATextArea__c</fullName>
        <label>ATextArea</label>
        <type>TextArea</type>
    </CustomField>