gearset/main/default/objects/AllFieldTypesObject__c/fields/ATime__c.field-meta.xml
<CustomField>
        <fullName>ATime__c</fullName>
        <label>ATime</label>
        <type>Time</type>
    </CustomField>