gearset/main/default/objects/AllFieldTypesObject__c/fields/Aurl__c.field-meta.xml
<CustomField>
        <fullName>Aurl__c</fullName>
        <label>Aurl</label>
        <type>Url</type>
    </CustomField>