gearset/main/default/objects/AllFieldTypesObject__c/fields/NewFieldForDeletion__c.field-meta.xml
<CustomField>
        <fullName>NewFieldForDeletion__c</fullName>
        <defaultValue>false</defaultValue>
        <label>NewFieldForDeletion</label>
        <type>Checkbox</type>
    </CustomField>