gearset/main/default/objects/AllFieldTypesObject__c/fields/SomeFieldToBeAddedWithTransDeleted__c.field-meta.xml
<CustomField>
        <fullName>SomeFieldToBeAddedWithTransDeleted__c</fullName>
        <defaultValue>false</defaultValue>
        <label>SomeFieldToBeAddedWithTransDeleted</label>
        <type>Checkbox</type>
    </CustomField>