gearset/main/default/objects/AllFieldTypesObject__c/fields/SomeFieldToBeDeleted__c.field-meta.xml
<CustomField>
        <fullName>SomeFieldToBeDeleted__c</fullName>
        <defaultValue>false</defaultValue>
        <label>SomeFieldToBeDeleted</label>
        <type>Checkbox</type>
    </CustomField>